# TikTokLiveRust

./: .gitignore  Cargo.toml  FUNDING.yml  README.md  license.txt
.github/workflows/: rust.yml
api/: Cargo.toml
build-script/: Cargo.toml  event.rs
build-script/proto/: data.proto  enums.proto  webcast.proto
build-script/src/: event_models.rs  event_models_loader.rs  events_builder_generator.rs  events_generator.rs  events_mapper_generator.rs  main.rs
build-script/src/proto/: data.rs  enums.rs  webcast.rs
client/: Cargo.toml
client/src/: common.rs  lib.rs  live_client.rs  live_client_builder.rs  live_client_events.rs  tiktok.rs  tiktok_live.rs
client/src/common/: live_common.rs  live_events.rs
client/src/http/: http_data.rs  http_data_mappers.rs  http_request_builder.rs
client/src/tiktok/: live_client.rs  live_client_builder.rs  live_client_events.rs  live_client_http.rs  live_client_mapper.rs  live_client_websocket.rs
example/: Cargo.toml
example/src/: main.rs
src/: build.rs  core.rs  data.rs  errors.rs  generated.rs  http.rs  lib.rs  main.rs
src/core/: live_client.rs  live_client_builder.rs  live_client_events.rs  live_client_http.rs  live_client_mapper.rs  live_client_websocket.rs
src/data/: live_common.rs  live_events.rs
src/http/: http_data.rs  http_data_mappers.rs  http_request_builder.rs
src/proto/: data.proto  enums.proto  webcast.proto
src/proto/messages/: data.rs  enums.rs  mod.rs  webcast.rs
