[package]
name = "tiktoklive"
version = "0.0.10"
description = "A Rust library. Use it to receive live stream events such as comments and gifts in realtime from TikTok LIVE No credentials are required."
homepage = "https://github.com/jwdeveloper/TikTokLiveRust"
repository = "https://github.com/jwdeveloper/TikTokLiveRust"
keywords = ["api", "stream", "tiktok", "live", "tiktok-live", ]
categories = ["api-bindings", "game-development","games","development-tools","network-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"
authors = ["JW"]
readme = "README.md"


[dependencies]
log = "0.4"
env_logger = "0.10.1"
reqwest = "0.11"
urlencoding = "2.1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.16.0", features = ["native-tls"] }
bytes = "1.5.0"

protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"
protobuf = { version = "3.3.0", features = ["bytes"] }

url = "2.5.0"
tungstenite = "0.16.0"

[build-dependencies]
protobuf-codegen = "3.3.0"
protoc-bin-vendored = "3.0.0"


