[package]
name = "build-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettyplease = "0.2.16"
log = "0.4"
env_logger = "0.10.1"
quote = "1.0"
reqwest = "0.11"
urlencoding = "2.1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.16.0", features = ["native-tls"] }
bytes = "1.5.0"

protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
protobuf = { version = "3.4.0", features = ["bytes"] }

url = "2.5.0"
tungstenite = "0.16.0"
proc-macro2 = "1.0.75"
syn = "2.0.47"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-bin-vendored = "3.0.0"
