[package]
name = "tiktoklive_client"
version = "0.0.0"
edition = "2021"
authors = ["JW"]
build = "src/build.rs"


[dependencies]
log = "0.4"
env_logger = "0.9"
reqwest = "0.11"
urlencoding = "1.1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
bytes = "1.5.0"
protobuf-codegen = "3.3.0"
protobuf = "3.3.0"
protoc-bin-vendored = "3.0.0"



